# wasm-interpreter

./: CMakeLists.txt  main.cpp  readme.md
scripts/: helloworld.c  helloworld.wasm  runtime.h  simple.wasm
src/: interpreter.cpp  interpreter.hpp  util.cpp  util.hpp
